wip crud, opacity, visibility of layers, bug fixes

--- a/open-gis-viewer/src/components/DataList.css
+++ b/open-gis-viewer/src/components/DataList.css
@@ -12,7 +12,7 @@
 .data {
     margin: 12px;
     text-align: left;
-    border-collapse: collapse;
+    /*border-collapse: collapse;*/
 }
 
 .data tbody tr {
