--- a/open-gis-viewer/src/components/MapInfo.css
+++ b/open-gis-viewer/src/components/MapInfo.css
@@ -107,8 +107,6 @@
     flex-direction: column;
     width: 5.5rem;
     height: 5.5rem;
-    border: 1px solid #ececec;
-    background-color: #2a2a2a;
     color: white;
     border-radius: 12px;
     align-items: center;
@@ -120,11 +118,34 @@
     font-weight: bold;
 }
 
-.update-date__year {
-    font-size: 0.75rem;
+/*
+map
+*/
+.map-table {
+    width: 100%;
+    border-collapse: collapse;
 }
 
-.update-date__day {
-    font-size: 1.5rem;
-    font-weight: bold;
+.map-table th, td {
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+}
+
+.map-row:hover {
+    background-color: #575858;
+    color: white;
+}
+
+.map-table button {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #8c0000;
+    color: white;
+    cursor: pointer;
+}
+
+.map-table button:hover {
+    background-color: #520303;
 }
